syntax = "proto3";
option java_multiple_files = true;
package org.hypertrace.core.span.constants.v1;

import "org/hypertrace/core/span/constants/v1/enum_extension.proto";

// This file contains constants related to open telemetry tracer.
// Written as per
enum OTELSpanTag {
  OTEL_SPAN_TAG_UNSPECIFIED = 0 [(string_value) = "unspecified"];

  // RPC
  // https://github.com/open-telemetry/opentelemetry-specification/blob/master/specification/trace/semantic_conventions/rpc.md
  OTEL_SPAN_TAG_RPC_SYSTEM = 1 [(string_value) = "rpc.system"];
  OTEL_SPAN_TAG_RPC_SERVICE = 2 [(string_value) = "rpc.service"];
  OTEL_SPAN_TAG_RPC_METHOD = 3 [(string_value) = "rpc.method"];

  // Net
  // https://github.com/open-telemetry/opentelemetry-specification/blob/master/specification/trace/semantic_conventions/span-general.md#general-network-connection-attributes
  OTEL_SPAN_TAG_NET_PEER_IP = 4 [(string_value) = "net.peer.ip"];
  OTEL_SPAN_TAG_NET_PEER_PORT = 5 [(string_value) = "net.peer.port"];
  OTEL_SPAN_TAG_NET_PEER_NAME = 6 [(string_value) = "net.peer.name"];
  OTEL_SPAN_TAG_NET_TRANSPORT = 7 [(string_value) = "net.transport"];
}

enum OTELRpcSystem {
  OTEL_RPC_SYSTEM_UNSPECIFIED = 0 [(string_value) = "unspecified"];
  OTEL_RPC_SYSTEM_GRPC = 1 [(string_value) = "grpc"];
  OTEL_RPC_SYSTEM_JAVA_RMI = 2 [(string_value) = "java_rmi"];
  OTEL_RPC_SYSTEM_WCF = 3 [(string_value) = "wcf"];
}
